# fredshell

./: .codespellrc  .dictionary.txt  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  COMPAT.md  Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  flake.nix  plan.md  typos.toml
.github/workflows/: ci.yml  update-flakes.yaml
Documents/: PLAN_01_philosophy.md  PLAN_02_architecture.md  PLAN_03_ansi.md  PLAN_04_terminal_io.md  PLAN_05_testing.md  PLAN_06_exec.md  PLAN_06a_exec_skeleton.md  PLAN_06b_exec_phase_b.md  PLAN_07_interactive_ux.md  PLAN_07_line_editor.md  PLAN_07_spec_drafting.md  PLAN_08_fuzzer.md  PLAN_08_prompt.md  PLAN_08_spec_drafting.md  PLAN_09_fuzzer.md  PLAN_09_logging.md  PLAN_10_embedding.md  PLAN_10_traps_and_jobs.md  PLAN_11_exec_phase_b.md  PLAN_11_parser.md  PLAN_11_prompt.md  PLAN_12_exec_phase_b.md  PLAN_12_traps_and_jobs.md  PLAN_13_line_editor.md  PLAN_13_traps_and_jobs.md  PLAN_14_line_editor.md  PLAN_14_prompt.md  PLAN_15_prompt.md  PLAN_16_coproc.md  PLAN_19_coproc.md  PLAN_20_coproc.md  PLAN_21_gettext.md  QUESTIONS_for_review.md
Documents/decisions/: 0001-in-process-execution-and-builtin-tiers.md  0002-ansi-encoding-crate-strategy.md  0003-test-first-compatibility-methodology.md  0004-strict-default-execution.md  0006-fredshell-core-embeddable.md
crates/fredshell/: Cargo.toml
crates/fredshell-ansi/: Cargo.toml
crates/fredshell-ansi/benches/: decode.rs  encode.rs
crates/fredshell-ansi/src/: cursor.rs  decode.rs  erase.rs  int.rs  kitty.rs  lib.rs  mode.rs  osc.rs  sgr.rs
crates/fredshell-core/: Cargo.toml
crates/fredshell-core/benches/: exec_roundtrip.rs
crates/fredshell-core/src/: builtins.rs  exec.rs  lib.rs  repl.rs
crates/fredshell-core/src/exec/: builtin.rs  env.rs  error.rs  mod.rs  testing.rs
crates/fredshell-core/src/parser/: mod.rs
crates/fredshell-core/src/tty/: capabilities.rs  controlling.rs  mod.rs  pgrp.rs  signal.rs  termios.rs  test_pty.rs  wait.rs  winsize.rs
crates/fredshell-core/src/tty/probe/: env.rs  interpret.rs  mod.rs  run.rs
crates/fredshell-core/tests/: run_source_smoke.rs
crates/fredshell-prompt/: Cargo.toml
crates/fredshell-prompt/benches/: render.rs
crates/fredshell-prompt/src/: lib.rs
crates/fredshell-spec-runner/: Cargo.toml
crates/fredshell-spec-runner/src/: case.rs  error.rs  lib.rs  main.rs  runner.rs  sandbox.rs  verdict.rs
crates/fredshell-spec-runner/tests/: smoke.rs
crates/fredshell/src/: main.rs
crates/fredshell/tests/: oneshot.rs
nix/: home-manager-module.nix  overlay.nix
tests/spec/: README.md  REFERENCE.md
tests/spec/arithmetic/: arith_basic.case.toml
tests/spec/arrays/: indexed_array.case.toml
tests/spec/builtins_tier1/: empty_script.case.toml  exit_after_blank_lines.case.toml  exit_default.case.toml  exit_nonnumeric_arg.case.toml  exit_nonnumeric_arg.stderr  exit_nonzero.case.toml  exit_short_circuits.case.toml  exit_zero.case.toml  only_blank_lines.case.toml
tests/spec/control_flow/: if_else.case.toml
tests/spec/error_handling/: set_e_aborts.case.toml
tests/spec/expansions/: brace_expansion.case.toml
tests/spec/functions/: simple_function.case.toml
tests/spec/job_control/: background_wait.case.toml  background_wait.stderr
tests/spec/parameter_expansion/: default_value.case.toml
tests/spec/pipelines/: simple_pipe.case.toml  simple_pipe.stdout
tests/spec/quoting/: mixed_quotes.case.toml  mixed_quotes.stdout
tests/spec/redirection/: redirect_stdout_to_file.case.toml
tests/spec/tests_and_conditionals/: string_eq.case.toml
tests/spec/traps_and_signals/: trap_exit.case.toml
xtask/: Cargo.toml
xtask/src/: compat.rs  main.rs  spec.rs
xtask/src/spec/: lint.rs  mod.rs  record.rs
