[workspace]
resolver = "3"
members = [
  "crates/fredshell",
  "crates/fredshell-core",
  "crates/fredshell-prompt",
  "xtask",
]
default-members = [
  "crates/fredshell",
  "crates/fredshell-core",
  "crates/fredshell-prompt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "An opinionated, batteries-included Rust shell"
documentation = "https://github.com/fredsystems/fredshell/README.md"
readme = "README.md"
homepage = "https://github.com/fredsystems/fredshell"
repository = "https://github.com/fredsystems/fredshell"
license = "MIT"
keywords = ["shell", "cli", "repl", "bash", "posix"]
categories = ["command-line-utilities"]

[workspace.lints.clippy]
# Lint groups. Set with priority = -1 so individual lint overrides
# (warn / allow) below take precedence.
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }

# Individually denied lints. These are members of `pedantic` already
# but are listed explicitly to document the contract and survive any
# future reorganization of the pedantic group.
unwrap_used = "deny"
expect_used = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"

# Allowed by policy.
multiple_crate_versions = "allow" # Transitive dependency versions are not our concern.
cargo_common_metadata = "allow"   # Metadata is inherited from the workspace.

[workspace.dependencies]
# CLI / errors / logging
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
clap-verbosity-flag = "=3.0.4"
color-eyre = "=0.6.5"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "parking_lot"] }

# Config / data
serde = { version = "=1.0.228", features = ["derive"] }

# Shell pieces
nu-ansi-term = "=0.50.3"
shell-words = "=1.1.1"

# xtask helpers
duct = "=1.1.1"

# Test helpers
assert_cmd = "=2.2.2"
predicates = "=3.1.4"
tempfile = "=3.27.0"
