[package]
name = "xtask"
edition = "2021"
publish = false
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
clap.workspace = true
color-eyre.workspace = true
duct.workspace = true
fredshell-core = { path = "../crates/fredshell-core" }
fredshell-spec-runner = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
