[package]
name = "fredshell-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core shell primitives for fredshell"

[dependencies]
anyhow.workspace = true
libc.workspace = true
nix.workspace = true
serde = { workspace = true }
shell-words.workspace = true
thiserror.workspace = true
tracing.workspace = true
