[package]
name = "fredshell-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core shell primitives for fredshell"

[lints]
workspace = true

[dependencies]
fredshell-ansi.workspace = true
libc.workspace = true
shell-words.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "exec_roundtrip"
harness = false
