[package]
name = "fredshell-prompt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Starship-style prompt renderer baked into fredshell"

[lints]
workspace = true

[dependencies]
fredshell-ansi = { path = "../fredshell-ansi" }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "render"
harness = false
