[package]
name = "fredshell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "fredshell"
path = "src/main.rs"

[dependencies]
fredshell-core = { path = "../fredshell-core" }
fredshell-prompt = { path = "../fredshell-prompt" }
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
directories.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
