[package]
name = "fredshell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "fredshell"
path = "src/main.rs"

[dependencies]
fredshell-core = { path = "../fredshell-core" }
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
